force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/StellaConnect__Stella_Connect_Request__c.object-meta.xml
<CustomObject>
    <label>Stella Connect Request</label>
    <nameField>
        <displayFormat>SCR-{0000}</displayFormat>
        <label>Stella Connect Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stella Connect Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>