force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Brand__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Brand__c</fullName>
    <label>Brand</label>
    <length>80</length>
    <type>Text</type>
</CustomField>