force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Case_Lookup__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Case_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the object that triggers the Stella Connect request</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Stella Connect Requests</relationshipLabel>
    <relationshipName>Stella_Connect_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>