force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Channel__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Channel__c</fullName>
    <label>Channel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>