force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Country__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Country__c</fullName>
    <label>Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>