force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Custom_Properties__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Custom_Properties__c</fullName>
    <label>Custom Properties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>