force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Customer_Email__c</fullName>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>