force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>