force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Do_Not_Send__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Do_Not_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send</label>
    <type>Checkbox</type>
</CustomField>