force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>