force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Error_Type__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Error_Type__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Field Mapping Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>