force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Language__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Language__c</fullName>
    <label>Language</label>
    <length>5</length>
    <type>Text</type>
</CustomField>