force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Originating_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Originating_Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Originating Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>