force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Request_Id__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Request_Id__c</fullName>
    <externalId>true</externalId>
    <label>Request Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>