force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Request_Payload__c</fullName>
    <label>Request Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>