force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Request_Successful__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Request_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Successful</label>
    <type>Checkbox</type>
</CustomField>