force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Request_Type__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Request_Type__c</fullName>
    <inlineHelpText>The type of Stella Connect Request record</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Feedback</fullName>
                <default>true</default>
                <label>Initial Feedback</label>
            </value>
            <value>
                <fullName>Service Recovery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>