force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Send_Date__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Send_Date__c</fullName>
    <label>Send Date</label>
    <type>DateTime</type>
</CustomField>