force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Stella_Connect_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Stella_Connect_Employee_Id__c</fullName>
    <label>Stella Connect Employee Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>