force-app/main/default/objects/StellaConnect__Stella_Connect_Request__c/fields/StellaConnect__Tags__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Tags__c</fullName>
    <label>Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>